--- a/tests/test.yml
+++ b/tests/test.yml
@@ -1,5 +1,29 @@
 ---
-- hosts: localhost
+- hosts: all
   remote_user: root
+
+  pre_tasks:
+  - name: Update apt cache if needed
+    apt: update_cache=yes cache_valid_time=3600
+
+  - name: Install git
+    apt:
+      name: git
+      update_cache: yes
+
+  - name: Install php-config
+    apt:
+      name: php-dev
+      update_cache: yes
+
   roles:
-    - oaklabs.phalcon
+    - ../../
+
+  post_tasks:
+    - name: SHELL | Ensure Phalcon is installed and enabled
+      shell: php -i | grep -i phalcon
+      changed_when: false
+
+    - name: COMMAND | Display Phalcon version
+      command: php -r 'echo Phalcon\Version::get() . "\n";'
+      changed_when: false
